~ v4.2.3.0
- Fixed playlist downloader not working with named folders (I broke it for the 2nd time, I swear it's fixed now :) )

~ v4.2.2.0
- I accidentally broke the playlist downloader in the last update (it is now fixed, sorry!)
- The updater now displays a changelog for the new update

~ v4.2.1.0
- Added a feature to refresh the download if it gets stuck (control or shift-click the download button)
- Fixed bug with the playlist folder name resetting when used in-tangent with the queue system
- Made QueueItem files more human readable

~ v4.2.0.0
- Added a feature to download playlists (just paste a playlist link and it will auto-detect, or you can specify it manually)
- Added a feature to automatically choose the output name
- Improved the trimming system, you can now choose a start timestamp and automatically cut until the end, or vise-versa
- Added an option to download thumbnails
- Added a self-updater
- Added a button to reset settings to default
- Updated the config system
- Minor visual changes
- Fixed minor bugs

~ v4.1.1.0
- Fixed history not sorting correctly

~ v4.1.0.0
- Added a new format option named mp4 (fast), this option will download videos as fast as possible and disregard all codecs (this is extremely useful for downloading long videos if you plan on just viewing them, some video editors may not accept this format)
- Minor spelling changes

~ v4.0.1.0
- Fixed a bug where downloads could not be started again if the previous one failed
- Double-clicking on custom argument text boxes now opens the documentation pages for each redist (forgot to add this)
- History now sorts in descending order

~ v4.0.0.0
- I completely re-wrote MediaDownloader from the ground-up, I fixed several major issues and greatly optimized parts of the code
- Added a feature to queue multiple downloads
- Added a feature that displays previous downloads
- Added a feature to change the resolution of video downloads